# A01796345_Pruebas_y_Calidad

4.2/P1/: computeStatistics.py
4.2/P1/results/: StatisticsResults.txt
4.2/P2/: convertNumbers.py
4.2/P2/results/: ConversionResults.txt
4.2/P3/: wordCount.py
4.2/P3/results/: WordCountResults.txt
A01796345_Número de actividadA5.2/: .gitignore  computeSales.py  pyproject.toml
A01796345_Número de actividadA6.2/: .flake8  .gitignore  base_classes.py  customer.py  hotel.py  pyproject.toml  reservation.py  test_customer.py  test_hotel.py  test_reservation.py
