[project]
name = "reservation-system"
version = "0.1.0"
description = "Sistema de reservaciones - Actividad 6.2"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "coverage",
    "pylint",
]

[tool.coverage.run]
source = ["."]
omit = ["test_*.py"]

[tool.coverage.report]
show_missing = true
